# trast

./: Cargo.toml  Dockerfile  main.py  requirements.txt
.github/workflows/: docker.yml
examples/: bert.rs
onnx-bert/: Cargo.toml
onnx-bert/src/: lib.rs
src/: lib.rs  main.rs  remote.rs
trast/: Cargo.toml
trast-proto/: Cargo.toml  build.rs
trast-proto/proto/: trast.proto
trast-proto/src/: lib.rs
trast/src/: main.rs  trace.rs
