[package]
name = "trast"
version = "0.1.0"
edition = "2021"

[dependencies]
cached-path = { version = "0.6.0", default-features = false, features = ["rustls-tls"], optional = true }
dirs = { version = "4", optional = true }
onnxruntime = { version = "0.0.14", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokenizers = { version = "0.13.2", features = ["onig", "esaxx_fast"], default-features = false }

[features]
default = ["download"]
download = ["dep:dirs", "dep:cached-path"]
