[package]
name = "trast"
version = "0.1.0"
edition = "2021"

[dependencies]
cached-path = { version = "0.6.0", default-features = false, features = ["rustls-tls"], optional = true }
dirs = { version = "4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
tokenizers = { version = "0.13.2", features = ["onig"], default-features = false }
tract-onnx = "0.19.2"

[features]
default = ["remote", "esaxx_fast"]
remote = ["dep:dirs", "dep:cached-path"]
esaxx_fast = ["tokenizers/esaxx_fast"]
