[package]
name = "trast"
version = "0.2.1"
edition = "2021"

[dependencies]
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros", "time"] }
onnx-bert = { path = "../onnx-bert", default-features = false, features = ["remote", "tracing"] }
thiserror = "1.0.38"
tokio-rayon = "2.1.0"
futures = "0.3.25"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
dotenv = "0.15.0"
trast-proto = { path = "../trast-proto" }
tonic = "0.8.3"
tonic-health = "0.8.0"
