[package]
name = "trast"
version = "0.2.5"
edition = "2021"

[dependencies]
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros", "time"] }
onnx-bert = { path = "../onnx-bert", default-features = false, features = ["remote", "tracing"] }
thiserror = "1.0.38"
tokio-rayon = "2.1.0"
futures = "0.3.25"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
dotenv = "0.15.0"
trast-proto = { path = "../trast-proto" }
tonic = "0.8.3"
tonic-health = "0.8.0"
opentelemetry-otlp = "0.11.0"
anyhow = "1.0.68"
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.18.0"
opentelemetry-semantic-conventions = "0.10.0"
hyper = "0.14.24"
tower = "0.4.13"
